Updated lot number for component in kit. Fixed collapse element.

--- a/flask_app/static/main.css
+++ b/flask_app/static/main.css
@@ -141,5 +141,5 @@ a, a:hover {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	background: url(../images/bg.jpg);
+	background: url(images/bg.jpg);
 }
